<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shijujohn.musicapp.MainActivity">
<ImageView
    style="@style/background_image_style"
    android:src="@drawable/music_background"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin">



    <Button
        android:id="@+id/button_now_playing"
        style="@style/home_buttons"
        android:text="@string/now_playing_button_text" />

    <Button
        android:id="@+id/button_library"
        style="@style/home_buttons"
        android:text="@string/library_button_text" />

    <Button
        android:id="@+id/button_search"
        style="@style/home_buttons"
        android:text="@string/search_button_text" />

    <Button
        android:id="@+id/button_settings"
        style="@style/home_buttons"
        android:text="@string/settings_button_text" />
    <TextView
        style="@style/descr_text"
        android:text="@string/descr_main"/>

</LinearLayout>
    </ScrollView>
</FrameLayout>
